# elgato-live-preview

./: .gitignore  LICENSE  README.md
live_preview/: CMakeLists.txt  frame.cpp  frame.h  frame_client.cpp  frame_client.h  frame_queue.cpp  frame_queue.h  frame_renderer.cpp  frame_renderer.h  frame_renderer_shader.h  gl_includes.h  main.cpp  non_copyable.h  post_process.cpp  post_process.h  render_to_texture.cpp  render_to_texture.h  screen_aligned_quad.cpp  screen_aligned_quad.h  shader.cpp  shader.h  utils.cpp  utils.h
live_preview/shaders/: screenAlignedQuad.glsl  sharpen.glsl  uyvyToRgb.glsl  yuvPlanarToRgb.glsl
obs_plugin/: CMakeLists.txt  obs-elgato.c
x264_hook/: CMakeLists.txt  frame_server.c  frame_server.h  startGameCaptureHD.sh.in  videotoolbox_hook.c  x264_hook.c
